# nexus-engine

./: .gitignore  AGENTS.md  PLAN.md  README.md  pyproject.toml
doc/: 01-traditional-techniques.md  02-ecs-rete-datalog.md
examples/: minimal_example.py
src/nexus_engine/agents/: context_builder.py  llm_interface.py  tools.py
src/nexus_engine/core/: ability.py  entity.py  event.py  systems.py  tag_index.py  value_objects.py
src/nexus_engine/crystallization/: crystallizer.py  pattern.py
src/nexus_engine/memory/: memory_system.py
src/nexus_engine/narrative/: pipeline.py
src/nexus_engine/npc/: drives.py  ensemble.py  goals.py
src/nexus_engine/projection/: state_view.py
src/nexus_engine/rules/: datalog.py  predicates.py  resolvers.py  rete.py  rule_engine.py
src/nexus_engine/setting/: setting_pack.py
src/nexus_engine/setting/packs/: jinyong.py
src/nexus_engine/store/: event_store.py  snapshot_store.py  sqlite_event_store.py
src/nexus_engine/validation/: canon.py  validator.py
src/nexus_engine/world/: director.py  region.py  world_simulator.py
tests/unit/: test_core.py  test_new_modules.py
