[project]
name = "nexus-engine"
version = "0.1.0"
description = "Universal text RPG framework with Event Sourcing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "litellm>=1.83.9",
    "pre-commit>=4.5.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.11",
    "sqlalchemy>=2.0.49",
    "ty>=0.0.31",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_engine"]

[tool.hatch.build.targets.sdist]
include = ["src", "PLAN.md", "AGENTS.md"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest-cov>=7.1.0",
]
